<resources>
    <string name="app_name">Latticify</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="button_ok_text">OK</string>
    <string name="button_cancel_text">Cancel</string>

    <string name="action_settings">Settings</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_channels">Channels</string>
    <string name="nav_profile">Profile</string>
    <string name="directory">Directory</string>
    <string name="nav_starred">Starred</string>
    <string name="nav_groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="welcome_to_latticify">Welcome to Latticify</string>
    <string name="get_started">Get started</string>

    <string name="action_search">Search</string>
    <string name="action_others">Others</string>

    <string name="channel_summary">%1$s %2$s</string>

    <string name="team_url">%1$s.slack.com</string>
    <string name="channel">Channel</string>
    <string name="message">Message</string>
    <string name="channel_name_with_hashtag"># %1$s</string>

    <string name="message_in_channel">Message in #%1$s</string>
    <string name="direct_message">Direct message</string>

    <string name="real_name">Real name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="status">Status</string>
    <string name="locale">Locale</string>
    <string name="timezone">Timezone</string>
    <string name="timezone_same">In your timezone (%1$s)</string>

    <plurals name="timezone_ahead">
        <item quantity="one">1 hour ahead of you (%1$s)</item>
        <item quantity="other">%1$d hours ahead of you (%2$s)</item>
    </plurals>

    <plurals name="timezone_behind">
        <item quantity="one">1 hour behind you (%1$s)</item>
        <item quantity="other">%1$d hours behind you (%2$s)</item>
    </plurals>

    <string name="menu_edit">Edit</string>
    <string name="menu_view_files">View files</string>
    <string name="menu_invite_to_channel">Invite to channel</string>
    <string name="menu_invite_members_to_channel">Invite members</string>
    <string name="menu_directory">Directory</string>

    <string name="menu_set_status">Set status</string>
    <string name="menu_invite_members_to_team">Invite members</string>
    <string name="menu_snooze">Snooze</string>

    <string name="channel_details">Channel details</string>
    <string name="set_status">Set status</string>
    <string name="create_channel">Create channel</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="menu_view_details">View details</string>

    <string name="no_purpose_set">No purpose set</string>
    <string name="no_topic_set">No topic set</string>
    <string name="archive_description">Archiving will remove #%1$s from the channel list, and close it for all members. Everything will still be stored and searchable.</string>
    <string name="channel_creation">%1$s create this channel on %2$s</string>
    <string name="purpose">Purpose</string>
    <string name="topic">Topic</string>
    <string name="edit">EDIT</string>
    <string name="actions">Actions</string>
    <string name="notifications">Notifications</string>
    <string name="add_someone">Add someone</string>
    <string name="member_list_with_number">Member list (%1$d)</string>
    <string name="leave">Leave</string>
    <string name="advanced">Advanced</string>
    <string name="archive">Archive</string>
    <string name="pinned_items">Pinned items</string>

    <string name="channel_name_description">Names must be lowercase, without spaces or periods, and shorter than 22 characters.</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_public">Public</string>
    <string name="channel_public_description">Anyone on your team can join.</string>
    <string name="channel_private">Private</string>
    <string name="channel_private_description">Private channel (Group) are invite-only, and do not show up in the channel browser list.</string>
    <string name="channel_add_members">Add members</string>
    <string name="optional">Optional</string>
    <string name="channel_purpose">Purpose</string>
    <string name="channel_purpose_description">Optional. Give your channel a purpose that describes what it will be used for.</string>
    <string name="menu_done">Done</string>
    <string name="no_result">No result.</string>
    <string name="files">Files</string>
    <string name="messages">Messages</string>

    <string name="search">Search</string>
    <string name="search_file_description">%1$s • %2$s</string>

    <string name="suggested">Suggested</string>
    <string name="whats_your_status">What\'s your status?</string>
    <string name="in_a_meeting"> 🗓 In a meeting</string>
    <string name="commuting"> 🚌 Commuting</string>
    <string name="out_sick"> 🤒 Out sick</string>
    <string name="vacationing"> 🏝 Vacationing</string>
    <string name="working_remotely"> 🏡 Working remotely</string>
    <string name="name">Name</string>

    <string name="edit_channel">Edit channel</string>
    <string name="mute_channel">Mute channel</string>
    <string name="mute_channel_description">You won\'t receive notifications from muted channel, and they\'ll appear grayed out in your channel list. This settings applies across all your devices.</string>
    <string name="ignore_at_channel_and_at_here">Ignore @channel and @here</string>
    <string name="notifications_range">On mobile, notify me about…</string>

    <string name="search_hint">Search for messages or files</string>
    <string name="search_close">Close</string>
    <string name="share_file">Share file</string>
    <string name="copy_link">Copy link</string>
    <string name="delete">Delete</string>
    <string name="download_file">Download</string>
    <string name="file">File</string>
    <string name="comment">Comment</string>
    <string name="add_reaction">Add reaction</string>
    <string name="star_channel">Star channel</string>
    <string name="copy_text">Copy text</string>
    <string name="copy_link_to_message">Copy link to message</string>
    <string name="share_message">Share message</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="pin_to_conversation">Pin to conversation</string>
    <string name="unpin_to_conversation">Unpin to conversation</string>
    <string name="edit_message">Edit message</string>
    <string name="delete_message">Delete Message</string>
    <string name="avatar">Avatar</string>
    <string name="dialog_delete_file_title">Delete file</string>
    <string name="dialog_delete_file_msg">Are you sure you want to delete this file permanently?</string>

    <string name="copied">Copied</string>
    <string name="copy_failed">Copy failed</string>
    <string name="failed_to_delete_file">Failed to delete file</string>

    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="availability">Availability</string>
    <string name="edit_profile">Edit profile</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_notifications">Snooze notifications</string>
    <string name="what_i_do">What I do</string>
    <string name="info">Info</string>
    <string name="slack_help_center">Slack help center</string>
    <string name="slack_privacy">Slack Privacy</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="general">General</string>
    <string name="notification_settings">Notification settings</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="version">Version</string>
    <string name="contributors">Contributors</string>
    <string name="source_code">Source code</string>
    <string name="support">Support</string>
    <string name="open_web_pages_in_app">Open web pages in app</string>
    <string name="open_web_pages_in_app_summary">Links will open in Latticify</string>
    <string name="source_code_summary">https://github.com/TonnyL/Latticify</string>
    <string name="contributors_summary">https://github.com/TonnyL/Latticify/graphs/contributors</string>
    <string name="display_typing_indicators_summary">Typing indicators will be displayed</string>
    <string name="display_typing_indicators">Display typing indicators</string>

    <string name="pinned">Pinned</string>
    <string name="unpinned">Unpinned</string>

    <string name="connecting">Connecting…</string>

    <plurals name="user_typing">
        <item quantity="zero">%s</item>
        <item quantity="one">%s is typing…</item>
        <item quantity="two">%s and %s are typing…</item>
        <item quantity="other">Many members are typing…</item>
    </plurals>

    <plurals name="member_count">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>

    // 1 hour ago
    <string name="message_extra_info_0">%1$s</string>
    // edited • 1 hour ago
    <string name="message_extra_info_1">edited • %1$s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="at">At</string>
    <string name="emoji_ghost">👻</string>
    <string name="bot">BOT</string>
    <string name="msg_starred">Starred</string>
    <string name="msg_unstarred">Unstarred</string>
    <string name="view_profile">View profile</string>
    <string name="close_conversation">Close conversation</string>
    <string name="hint_comment">Comment…</string>
    <string name="desc_send">Send</string>
    <string name="hint_message">Message…</string>

    <string name="download_desc">Downloading %1$s</string>
    <string name="notification_channel_download">Download</string>
    <string name="notification_channel_download_desc">Notify when download completed</string>
    <string name="download_complete">Download complete</string>
    <string name="comment_added">Comment added</string>
    <string name="file_deleted">Deleted</string>
    // Dec 27th at 4:00 PM • APK • 2 MB • Private file
    <string name="file_info">%1$s • %2$s • %3$s • %4$s</string>
    <string name="private_file">Private file</string>
    <string name="public_file">Public file</string>
    <string name="menu_done_with_progress">Done (%1$d)</string>

    <string name="channel_archived">Archived</string>
    <string name="channel_left">Left channel</string>
    <string name="update_error">Update error</string>
    <string name="update_success">Update success</string>
    <string name="private_channel">Private</string>
    <string name="public_channel">Public</string>
    <string name="member_list">Member list</string>
    <string name="status_updated">Status updated</string>

    <string-array name="snooze_notifications_entries">
        <item>20 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>8 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="snooze_notifications_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
