<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/profile">

        <Preference
            android:key="key_edit_profile"
            android:title="@string/edit_profile" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="key_availability"
            android:summaryOff="@string/offline"
            android:summaryOn="@string/online"
            android:title="@string/availability" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <Preference
            android:key="key_notification_settings"
            android:title="@string/notification_settings" />

        <Preference
            android:key="key_do_not_disturb"
            android:title="@string/do_not_disturb" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general">

        <SwitchPreference
            android:key="key_open_web_pages_in_app"
            android:summary="@string/open_web_pages_in_app_summary"
            android:title="@string/open_web_pages_in_app" />

        <SwitchPreference
            android:key="key_display_typing_indicators"
            android:summary="@string/display_typing_indicators_summary"
            android:title="@string/display_typing_indicators" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/support">

        <Preference
            android:key="key_source_code"
            android:summary="@string/source_code_summary"
            android:title="@string/source_code" />

        <Preference
            android:key="key_contributors"
            android:summary="@string/contributors_summary"
            android:title="@string/contributors" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:key="key_slack_help_center"
            android:title="@string/slack_help_center" />

        <Preference
            android:key="key_slack_privacy"
            android:title="@string/slack_privacy" />

        <Preference
            android:key="key_open_source_licenses"
            android:title="@string/open_source_licenses" />

        <Preference
            android:key="key_version"
            android:summary="%1$s"
            android:title="@string/version" />

    </PreferenceCategory>

</PreferenceScreen>