<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/profile_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile" />
    </group>

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_direct_messages"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/nav_messages" />
        <item
            android:id="@+id/nav_channels"
            android:icon="@drawable/ic_channel_black_24dp"
            android:title="@string/nav_channels" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_groups" />
        <item
            android:id="@+id/nav_directory"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/directory" />
        <item
            android:id="@+id/nav_starred_items"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_starred" />
    </group>

    <group
        android:id="@+id/tertiary_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />
    </group>

</menu>
