<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_message_0"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_copy_text"
            android:icon="@drawable/ic_content_copy_black_24dp"
            android:title="@string/copy_text" />

        <item
            android:id="@+id/action_copy_link_to_message"
            android:icon="@drawable/ic_link_black_24dp"
            android:title="@string/copy_link_to_message" />

        <item
            android:id="@+id/action_share_message"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share_message" />

    </group>

    <group
        android:id="@+id/group_message_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_add_reaction"
            android:icon="@drawable/ic_emoji_black_24dp"
            android:title="@string/add_reaction" />

    </group>

    <group
        android:id="@+id/group_message_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_star"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/star" />

        <item
            android:id="@+id/action_remind_me"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/remind_me" />

        <item
            android:id="@+id/action_mark_unread"
            android:icon="@drawable/ic_link_black_24dp"
            android:title="@string/mark_unread" />

        <item
            android:id="@+id/action_pin_to_conversation"
            android:icon="@drawable/ic_pin_black_24dp"
            android:title="@string/pin_to_conversation" />

    </group>

    <group
        android:id="@+id/group_message_3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_edit_message"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/edit_message" />

        <item
            android:id="@+id/action_delete_message"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/delete" />

    </group>

</menu>