<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin_half"
        android:paddingStart="@dimen/activity_horizontal_margin_half">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            app:cardCornerRadius="@dimen/card_view_radius"
            app:cardElevation="@dimen/card_view_elevation"
            app:cardUseCompatPadding="true"
            app:contentPaddingBottom="@dimen/activity_vertical_margin"
            app:contentPaddingLeft="@dimen/activity_horizontal_margin"
            app:contentPaddingRight="@dimen/activity_horizontal_margin"
            app:contentPaddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/statusEmojiTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emoji_ghost" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/statusEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:hint="@string/whats_your_status" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            app:cardCornerRadius="@dimen/card_view_radius"
            app:cardElevation="@dimen/card_view_elevation"
            app:cardUseCompatPadding="true"
            app:contentPaddingBottom="@dimen/activity_vertical_margin"
            app:contentPaddingLeft="@dimen/activity_horizontal_margin"
            app:contentPaddingRight="@dimen/activity_horizontal_margin"
            app:contentPaddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/suggested"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/meetingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/in_a_meeting"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/commutingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/commuting"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/outSickTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/out_sick"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/vacationingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/vacationing"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/workingRemotelyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/working_remotely"
                    android:textColor="@color/textColorPrimary" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>